# Bulletin-Test-Addon

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bulletin_test_addon/: test_addon.py
src/bulletin_test_addon/templates/: test.html
tests/: test.py
