[project]
name = "Bulletin-Test-Addon"
version = "1.0.1"
description = "A python framework for generating newsletters"
dependencies = [
    "feedparser",
    "markdown",
    "Jinja2"
]


[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bulletin"]